samples/_failures_safe/1761356143_82a3e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_303715f4.c: In function ‘main’:
./samples/SAFE/__tmp_303715f4.c:141:85: error: expected ‘)’ at end of input
  141 |     printf("Compression ratio: %.2f%%\n", (1.0 - (double)compressed_size / input_len
      |                                           ~                                         ^
      |                                                                                     )
./samples/SAFE/__tmp_303715f4.c:141:5: error: expected declaration or statement at end of input
  141 |     printf("Compression ratio: %.2f%%\n", (1.0 - (double)compressed_size / input_len
      |     ^~~~~~
